--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
     <div class="showErrors"></div>
     <div class="showHumidity"></div>
     <div class="showTemp"></div>
+    <div class="showVisibility"></div>
+    <div class="showWindSpeed"></div>
   </div>
 </body>
 </html>
