--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,16 @@
   <div class="container">
     <h1>Get Weather Conditions From Anywhere!</h1>
     <label for="location">Enter a location:</label>
-    <input id="location" type="text">
+    <input id="location" type="text"><br>
     <button class="btn-success" id="weatherLocation">Get Current Temperature and Humidity</button>
     <div class="showErrors"></div>
     <div class="showHumidity"></div>
     <div class="showTemp"></div>
     <div class="showVisibility"></div>
     <div class="showWindSpeed"></div>
+    <button class="btn-success" id="forecast">Get 5-Day Forecast</button>
+    <div class="showForecast"></div>
+
   </div>
 </body>
 </html>
