--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <input id="location" type="text"><br>
     <button class="btn-success" id="weatherLocation">Get Current Temperature and Humidity</button>
     <div class="showErrors"></div>
+    <div id="icon"><img id="showIcon" src="" alt="Weather icon"></div>
     <div class="showHumidity"></div>
     <div class="showTemp"></div>
     <div class="showVisibility"></div>
