add js for forecast
Co-Authored-By: Hayley M <hayleymcvay8@gmail.com>
Co-authored by: Marisa Edgar <marisaedgar1212@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <h1>Get Weather Conditions From Anywhere!</h1>
     <label for="location">Enter a location:</label>
     <input id="location" type="text"><br>
-    <button class="btn-success" id="weatherLocation">Get Current Temperature and Humidity</button>
+    <button class="btn-success" id="weatherLocation">Get Current Weather</button>
     <div class="showErrors"></div>
     <div id="icon"><img id="showIcon" src="" alt="Weather icon"></div>
     <div class="showHumidity"></div>
@@ -16,7 +16,9 @@
     <div class="showVisibility"></div>
     <div class="showWindSpeed"></div>
     <button class="btn-success" id="forecast">Get 5-Day Forecast</button>
-    <div class="showForecast"></div>
+    <div class="showForecast">
+      <ul></ul>
+    </div>
 
   </div>
 </body>
